--- a/src/engine/ruleset/environments/wazuh-environment.yml
+++ b/src/engine/ruleset/environments/wazuh-environment.yml
@@ -68,5 +68,8 @@ decoders:
   # Service decoders
   - decoder/syslog/0
 
+  # Cloud decoders
+  - decoder/azure_base_decoder/0
+
 outputs:
   - output/file-output/0
