Reorganized first level decoders and QoL changes

--- a/src/engine/extension/schema/wazuh/fields.yml
+++ b/src/engine/extension/schema/wazuh/fields.yml
@@ -1,5 +1,5 @@
 wazuh.queue:
-  description: 'A char indicating the Wazuh protocol queue of the eventes ingested'
+  description: 'Queue part of the OSSEC message format'
   type: long
 
 wazuh.syscollector.hardware:
