--- a/src/engine/ruleset/decoders/wazuh-agent/dbsync/dbsync.yml
+++ b/src/engine/ruleset/decoders/wazuh-agent/dbsync/dbsync.yml
@@ -14,7 +14,7 @@ metadata:
     - https://github.com/wazuh/wazuh/issues/13521
 
 sources:
-  - decoder/queue-dbsync/0
+  - decoder/internal-dbsync/0
 
 check:
   - event.original: +starts_with/{
