--- a/src/engine/ruleset/decoders/wazuh-agent/sca/sca.yml
+++ b/src/engine/ruleset/decoders/wazuh-agent/sca/sca.yml
@@ -18,7 +18,7 @@ metadata:
         - https://github.com/wazuh/wazuh/issues/13522
 
 sources:
-  - decoder/queue-sca/0
+  - decoder/internal-sca/0
 
 check:
   - event.original: +starts_with/{
