--- a/src/engine/test/scripts/engine-suite/setup.cfg
+++ b/src/engine/test/scripts/engine-suite/setup.cfg
@@ -28,7 +28,8 @@ engine_schema =
 console_scripts =
     engine-schema = engine_schema.__main__:main
     engine-decoder = engine_decoder.__main__:main
+    engine-integration = engine_integration.__main__:main
 
 [options.extras_require]
-dev = 
+dev =
     autopep8
