--- a/src/engine/ruleset/wazuh-core/decoders/core-ossec-message.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/core-ossec-message.yml
@@ -25,20 +25,20 @@ normalize:
   - logpar:
       - wazuh.location: $full_location
     map:
-      - wazuh.origin: +ef_rename/$~origin
-      - wazuh.registered_ip: +ef_rename/$~registered_ip
+      - wazuh.origin: +rename/$~origin
+      - wazuh.registered_ip: +rename/$~registered_ip
 
   - map:
       - event.original: $wazuh.message
-      - wazuh.decoders: +a_append/internal-ossec-message
+      - wazuh.decoders: +array_append/internal-ossec-message
 
   - check:
-      - agent: +ef_exists
+      - agent: +exists
     map:
       - agent.type: wazuh
 
   - check:
-      - agent.id: +ef_exists
+      - agent.id: +exists
     map:
       - host.id: $agent.id
       - host: +kvdb_get/agents_host_data/$agent.id
