Add stream base endpoint and test

--- a/src/engine/source/server/CMakeLists.txt
+++ b/src/engine/source/server/CMakeLists.txt
@@ -36,6 +36,8 @@ add_library(server STATIC
     ${ENGINE_SERVER_SOURCE_DIR}/engineServer.cpp
     ${ENGINE_SERVER_SOURCE_DIR}/endpoint.cpp
     ${ENGINE_SERVER_SOURCE_DIR}/unixDatagram.cpp
+    ${ENGINE_SERVER_SOURCE_DIR}/unixStream.cpp
+    ${ENGINE_SERVER_SOURCE_DIR}/protocolHandler.cpp
 )
 
 #TODO do this better
