--- a/src/engine/ruleset/decoders/windows/windows-security.yml
+++ b/src/engine/ruleset/decoders/windows/windows-security.yml
@@ -23,7 +23,7 @@ normalize:
     - event.module: security
 
     # Set categorization fields
-    - event: +kvdb_get_merge/win_security_categories/$~windows.Event.System.EventID.#text
+    - event.id: +kvdb_get_merge/win_security_categories/$~windows.Event.System.EventID.#text
 
     # Set Logon Type
     - winlog.logon.type: +kvdb_get/windows_logon_types/$~windows.Event.EventData.LogonType
@@ -187,13 +187,13 @@ normalize:
    map:
         - ~temp.split_memberName: +s_to_array/$~windows.Event.EventData.MemberName/,
         - ~temp.split_memberName.0: '+s_replace/CN=/'
-        - member.name: $~temp.split_memberName.0
+        - user.target.name: $~temp.split_memberName.0
         - related.user: +a_append/$~temp.split_memberName.0
         - group.id: $~windows.Event.EventData.TargetUserSid
         - group.id: $~windows.Event.EventData.TargetSid
         - group.name: $~windows.Event.EventData.TargetUserName
         - ~windows.Event.EventData.TargetDomainName: '+s_replace/DC=/'
-        - event.goup.domain: $~windows.Event.EventData.TargetDomainName
+        - group.domain: $~windows.Event.EventData.TargetDomainName
         - user.target.group.id: $group.id
         - user.target.group.name: $group.name
         - user.target.group.domain: $group.domain
@@ -281,11 +281,11 @@ normalize:
      - process.args: '+s_to_array/$~windows.Event.EventData.CommandLine/ '
      - process.pid: +s_hex_to_num/$~windows.Event.EventData.NewProcessId
      - process.executable: $~windows.Event.EventData.NewProcessName
-     - ~temp.file_data: +parse_file/$~windows.Event.EventData.NewProcessName 
+     - ~temp.file_data: +parse_file/$~windows.Event.EventData.NewProcessName
      - process.name: $~temp.file_data.name
      - process.parent.pid: +s_hex_to_num/$~windows.Event.EventData.ProcessId
      - process.parent.executable:  $~windows.Event.EventData.ParentProcessName
-     - ~temp.file_data: +parse_file/$~windows.Event.EventData.ParentProcessName 
+     - ~temp.file_data: +parse_file/$~windows.Event.EventData.ParentProcessName
      - process.parent.name: $~temp.file_data.name
      - process.command_line: $~windows.Event.EventData.CommandLine
 
@@ -305,7 +305,7 @@ normalize:
       - related.user: +a_append/$~windows.Event.EventData.TargetUserName
 
  - map:
-     - event.related.ip: $event.source.ip
+     - related.ip: $event.source.ip
 
  # Object Policy Change and SidListDesc
  # Cant be correctly parsed, at least keep recors from original log
@@ -317,70 +317,70 @@ normalize:
      - winlog.event_data.ObjectServer: $~windows.Event.EventData.ObjectServer
      - winlog.event_data.ObjectName: $~windows.Event.EventData.ObjectName
 
-# Set Service Type 
+# Set Service Type
  - check:
-    - $~windows.Event.EventData.ServiceType: "0x1"
+    - ~windows.Event.EventData.ServiceType: "0x1"
    map:
     - service.type: "Kernel Driver"
 
  - check:
-    - $~windows.Event.EventData.ServiceType: "0x2"
+    - ~windows.Event.EventData.ServiceType: "0x2"
    map:
     - service.type: "File System Driver"
 
  - check:
-    - $~windows.Event.EventData.ServiceType: "0x8"
+    - ~windows.Event.EventData.ServiceType: "0x8"
    map:
     - service.type: "Recognizer Driver"
 
  - check:
-    - $~windows.Event.EventData.ServiceType: "0x10"
+    - ~windows.Event.EventData.ServiceType: "0x10"
    map:
     - service.type: "Win32 Own Process"
 
  - check:
-    - $~windows.Event.EventData.ServiceType: "0x20"
+    - ~windows.Event.EventData.ServiceType: "0x20"
    map:
     - service.type: "Win32 Share Process"
 
  - check:
-    - $~windows.Event.EventData.ServiceType: "0x110"
+    - ~windows.Event.EventData.ServiceType: "0x110"
    map:
     - service.type: "Interactive Own Process"
 
  - check:
-    - $~windows.Event.EventData.ServiceType: "0x120"
+    - ~windows.Event.EventData.ServiceType: "0x120"
    map:
     - service.type: "Interactive Share Process"
 
 # Set event level
  - check:
-    - $~windows.Event.System.Level.#text: "0"
+    - ~windows.Event.System.Level.#text: "0"
    map:
     - winlog.level: "Audit"
 
  - check:
-    - $~windows.Event.System.Level.#text: "1"
+    - ~windows.Event.System.Level.#text: "1"
    map:
     - winlog.level: "Critical"
 
  - check:
-    - $~windows.Event.System.Level.#text: "2"
+    - ~windows.Event.System.Level.#text: "2"
    map:
     - winlog.level: "Error"
 
  - check:
-    - $~windows.Event.System.Level.#text: "3"
+    - ~windows.Event.System.Level.#text: "3"
    map:
     - winlog.level: "Warning"
 
  - check:
-    - $~windows.Event.System.Level.#text: "4"
+    - ~windows.Event.System.Level.#text: "4"
    map:
     - winlog.level: "Information"
 
  - check:
-    - $~windows.Event.System.Level.#text: "5"
+    - ~windows.Event.System.Level.#text: "5"
    map:
     - winlog.level: "Verbose"
 
